force-app/main/default/objects/Account/fields/firstname__c.field-meta.xml
<CustomField>
    <fullName>firstname__c</fullName>
    <description>This is a name field</description>
    <externalId>true</externalId>
    <label>firstame</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>