force-app/main/default/objects/Account/fields/lastname__c.field-meta.xml
<CustomField>
    <fullName>lastname__c</fullName>
    <description>This is last  name field</description>
    <externalId>true</externalId>
    <label>last name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>