force-app/main/default/objects/Account/fields/middlename__c.field-meta.xml
<CustomField>
    <fullName>middlename__c</fullName>
    <description>This is a middle name field</description>
    <externalId>true</externalId>
    <label>middle name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>